json/openvpn-vnet-subnet-default-nsg.json
{
    "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {},
    "variables":
    {
        "NSGName":"OpenVPN-VNET-Subnet-Default-NSG"
    },
    "resources": 
    [
        {
            "name":"[variables('NSGName')]",
            "type":"Microsoft.Network/networkSecurityGroups",
            "apiVersion":"2018-02-01",
            "location":"[resourceGroup().location]",
            "properties":
            {
                "securityRules":
                [
                    {
                        "name":"SSH",
                        "properties":
                        {
                          "priority":1001,
                          "description":"Allow SSH Login To The Virtual Machine",
                          "access":"Allow",
                          "direction":"Inbound",
                          "protocol":"Tcp",
                          "sourcePortRange":"*",
                          "sourceAddressPrefix":"*",
                          "destinationPortRange":"22",
                          "destinationAddressPrefix":"*"
                        }
                    },
                    {
                        "name":"SSL",
                        "properties":
                        {
                          "priority":1002,
                          "description":"Required By Open VPN Server",
                          "access":"Allow",
                          "direction":"Inbound",
                          "protocol":"Tcp",
                          "sourcePortRange":"*",
                          "sourceAddressPrefix":"*",
                          "destinationPortRange":"443",
                          "destinationAddressPrefix":"*"
                        }
                    },
                    {
                        "name":"1194",
                        "properties":
                        {
                          "priority":1003,
                          "description":"Required By Open VPN Server",
                          "access":"Allow",
                          "direction":"Inbound",
                          "protocol":"Udp",
                          "sourcePortRange":"*",
                          "sourceAddressPrefix":"*",
                          "destinationPortRange":"1194",
                          "destinationAddressPrefix":"*"
                        }
                    },
                    {
                        "name":"943",
                        "properties":
                        {
                          "priority":1004,
                          "description":"Required By Open VPN Server",
                          "access":"Allow",
                          "direction":"Inbound",
                          "protocol":"Tcp",
                          "sourcePortRange":"*",
                          "sourceAddressPrefix":"*",
                          "destinationPortRange":"943",
                          "destinationAddressPrefix":"*"
                        }
                    }
                ]
            }
        }
    ],
    "outputs": 
    {
        "ReturnedId":
        {
            "type": "string",
            "value": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('NSGName'))]"
        }
    }
  }
